# RAG-2.0

./: .dockerignore  .env.example  .env.production  .env.template  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  aws-ecs-task-definition.json  aws-ecs-task-definition.template.json  chroma_analysis_report_20250630_222802.json  chroma_analysis_summary.md  complete_ingestion_report.json  comprehensive_chroma_report_20250630_222921.json  deploy.sh  docker-compose.yml  document_titles.json  feedback.db  final_chroma_analysis.py  improved_voice.md  ingested_hashes.txt  langgraph.json  main.py  pyproject.toml  rag_agent.py  requirements.txt  simple_view.py  test_collection.py  test_rag_and_feedback.py  test_simple.py  test_vector_store.py  test_workflow.py
chroma_db/1165e841-68d9-484c-8ce2-2f4e4eeb5ba1/: index_metadata.pickle
cli/: kpi_dashboard.py
configs/: .env.example  langgraph.json
development/: Dockerfile  docker-compose.dev.yml  start-dev.sh
production/: Dockerfile.slack  docker-compose.prod.yml  start-slack-bot.sh
scripts/: feedback_admin.py  main.py
src/rag_2_0/: __init__.py  feedback.db  slack_bot.py  slack_bot_socket.py
src/rag_2_0/agents/: __init__.py  rag_agent.py
src/rag_2_0/agents/chroma_db/: chroma.sqlite3
src/rag_2_0/chroma_db/: chroma.sqlite3
src/rag_2_0/feedback/: __init__.py  feedback_analytics.py  feedback_collector.py  feedback_storage.py  kpi_monitor.py
src/rag_2_0/ingestion/: __init__.py  document_ingester.py  drive_loader.py  test.py  test_collection.py
src/rag_2_0/ingestion/chroma_db/: chroma.sqlite3
src/rag_2_0/tones/: default.md  doreen.md  janelle.md
src/rag_2_0/utils/: source_formatter.py
tests/: __init__.py  test_rag_agent.py  test_rag_system.py
