[project]
name = "rag-2.0"
version = "1.0.0"
description = "A production-ready RAG system built with LangGraph and LangChain"
requires-python = ">=3.12"
authors = [
    {name = "LoopFire AI", email = "contact@loopfire.ai"}
]
keywords = ["rag", "langchain", "langgraph", "ai", "nlp", "embeddings", "chromadb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=0.2.0",
    "langgraph-cli[inmem]>=0.3.1",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.0",
    "langsmith>=0.1.0",
    "chromadb>=0.5.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.172.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "langchain-google-community[drive]>=2.0.7",
    "pycryptodome>=3.23.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "slack-bolt>=1.18.0",
    "pypdf2>=3.0.1",
]

[project.urls]
Homepage = "https://github.com/LoopFireAI/RAG-2.0"
Repository = "https://github.com/LoopFireAI/RAG-2.0"
Issues = "https://github.com/LoopFireAI/RAG-2.0/issues"

[project.scripts]
rag = "cli.main:main"
ingest = "src.rag_2_0.ingestion.document_ingester:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
exclude = [
    "/.env*",
    "/chroma_db",
    "/data",
    "/.langgraph_api",
    "/tests",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.per-file-ignores]
"tests/*" = ["T20"]  # Allow print statements in tests

# Black configuration
[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | chroma_db
  | .langgraph_api
)/
'''

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
